# blueberry-browser

./: .gitignore  AGENTS.md  README.md  arch.md  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.agents/skills/blueberry-debug-promptware/: SKILL.md
.agents/skills/blueberry-promptware-run/: SKILL.md
.agents/skills/blueberry-run-test/: SKILL.md
blueberry-core/: Cargo.toml
blueberry-core/src/: main.rs  ollama_agent.rs  yaml_parser.rs
blueberry-sdk/: package-lock.json  package.json
blueberry-sdk/src/: index.ts
src/: .env.example  electron-builder.yml  electron.vite.config.ts  tsconfig.node.json  tsconfig.web.json
src/browser/main/: index.ts
src/browser/preload/: sidebar.ts  tab.ts  topbar.ts
src/browser/renderer/: tailwind.config.js
src/code/: Cargo.toml
src/code/src/: browser.rs  main.rs  ollama_agent.rs  promptware.rs  yaml_parser.rs
src/main/components/: SideBar.ts  Tab.ts  TopBar.ts  Window.ts
src/main/ipc/: EventManager.ts
src/main/services/: LLMClient.ts
src/preload/: sidebar.ts  topbar.ts
src/promptwares/AssertionAgent/: Program.md  system_prompt.md  user_prompt.md
src/promptwares/ChatCompanion/: Program.md  system_prompt.md  user_prompt.md
src/promptwares/E2ETest/: Program.md  (+2 more)
src/sdk/: package-lock.json  package.json
tests/: api_403_test.yaml  console_log_test.yaml  duckduckgo_search.yaml  example_test.yaml  google_search.yaml  hacker_news_search.yaml  python_dev_docs.yaml  wikipedia_blueberry.yaml
(+88 files in other folders)
