[package]
name = "blueberry-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
headless_chrome = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
