[package]
name = "blueberry-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "=1.52.3", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_yaml = "=0.9.34"
serde_json = "=1.0.150"
reqwest = { version = "=0.11.27", features = ["json", "multipart", "blocking"] }
headless_chrome = "=1.0.22"
clap = { version = "=4.6.1", features = ["derive"] }
anyhow = "=1.0.103"
async-trait = "=0.1.89"
